--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>My name is Ryan.</p>
     <p>My favorite things</p>
     <ul>
-        <li>Placeholder text</li>
+        <li>Placeholder text add</li>
         <li>Placeholder text</li>
         <li>Placeholder text</li>
         <li>Placeholder text</li>
