--- a/index.html
+++ b/index.html
@@ -9,15 +9,28 @@
 
 <body>
     <h1>Hello World!</h1>
-    <p>My name is Ryan.</p>
-    <p>My favorite things</p>
-    <ul>
-        <li>Placeholder text add</li>
-        <li>Placeholder text</li>
-        <li>Placeholder text</li>
-        <li>Placeholder text</li>
-        <li>Placeholder text</li>
-    </ul>
+    <p>My name is Ryan Thomas.</p>
+
+    <!-- What I did before CodeWorks -->
+    <p>Before CodeWorks, I spent most of my life as a musician. I went to both Boise State University and
+        Univeristy of Idaho for my degrees in music and, after graduating, worked on a cruise ship for four years.
+     My coding experience has been quite limited (from brushing up on various programming languages
+     to spending about the past year developing a couple of games as a hobby).</p>
+
+    <!-- What I hope to get out of this course -->
+    <p>, I am ready for the challenges that will come with this field, and I am excited to start a brand new career and meet new people.
+         I am excited to have the chance to dive into this field, start fresh and learn valuable skills. I plan
+         to keep my career options open, but depending on my position, I would appreciate the opportunity to be able to
+         work remotely if I plan to travel often.
+    </p>
+
+    <!-- Things I enjoy -->
+    <p>In addition to music, I thoroughly enjoy traveling, skiing, and working with computers. In addition,
+         I am currently learning Spanish as a second language, both because I have always wanted to be
+         able to speak another language fluently, and my girlfriend currently lives in Barcelona. I would
+         like to be able to converse with her family more effectively.
+    </p>
+
 </body>
 
 </html>
