--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
      to spending about the past year developing a couple of games as a hobby).</p>
 
     <!-- What I hope to get out of this course -->
-    <p>, I am ready for the challenges that will come with this field, and I am excited to start a brand new career and meet new people.
+    <p>I am ready for the challenges that will come with this field, and I am excited to start a brand new career and meet new people.
          I am excited to have the chance to dive into this field, start fresh and learn valuable skills. I plan
          to keep my career options open, but depending on my position, I would appreciate the opportunity to be able to
          work remotely if I plan to travel often.
